--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,6 +1,6 @@
 .btn-wrapper {
   display: flex;
-  gap: $space-8;
+  gap: 8px;
   background-color: #fff000;
   border-radius: 12px;
   color: #000;
