--- a/src/styles/details.scss
+++ b/src/styles/details.scss
@@ -1,36 +1,38 @@
 .detailsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin: 20px auto;
+  max-width: 600px;
+
+  .name {
+    text-align: center;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+  }
+
+  .info-section {
+    margin-bottom: 15px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    margin: 20px auto;
-    max-width: 600px; 
-  
-    .name {
-      text-align: center;
-      margin-bottom: 20px;
-      text-transform: capitalize;
+    justify-items: center;
+
+    h3 {
+      margin-bottom: 5px;
     }
-  
-    .info-section {
-      margin-bottom: 15px;
-  
-      h3 {
-        margin-bottom: 5px;
-      }
-  
-      ul {
-        list-style: none;
-        padding: 0;
-      }
-    }
-  
-    img {
-      max-width: 100%; // Make the image responsive
-      height: auto;
+
+    ul {
+      list-style: none;
+      padding: 0;
     }
   }
-  
-  
+
+  img {
+    max-width: 100%; // Make the image responsive
+    height: auto;
+  }
+}
