--- a/src/styles/details.scss
+++ b/src/styles/details.scss
@@ -39,97 +39,120 @@
     width: 100%;
     margin-bottom: 15px;
 
-    h3 {
-      margin-bottom: 5px;
-    }
+    .info-item {
+      margin-bottom: 10px;
+      h3 {
+        margin-bottom: 5px;
+      }
 
-    ul,
-    p {
-      list-style: none;
-      padding: 0;
-    }
-
-    .type-list {
-      display: flex;
-      gap: 5px;
-
-      .type {
-        padding: 5px 10px;
-        border-radius: 20px;
+      ul,
+      p {
         text-transform: capitalize;
-        font-weight: bold;
-        color: white;
+        list-style: none;
+        padding: 0;
       }
 
-      // Add background colors for different types
-      .grass {
-        background-color: #78c850;
-      }
-      .fire {
-        background-color: #f08030;
-      }
-      .water {
-        background-color: #6890f0;
-      }
-      .electric {
-        background-color: #f8d030;
-      }
-      .normal {
-        background-color: #a8a878;
-      }
-      .fighting {
-        background-color: #c03028;
-      }
-      .flying {
-        background-color: #a890f0;
-      }
-      .poison {
-        background-color: #a040a0;
-      }
-      .ground {
-        background-color: #e0c068;
-      }
-      .rock {
-        background-color: #b8a038;
-      }
-      .bug {
-        background-color: #a8b820;
-      }
-      .ghost {
-        background-color: #705898;
-      }
-      .steel {
-        background-color: #b8b8d0;
-      }
-      .psychic {
-        background-color: #f85888;
-      }
-      .ice {
-        background-color: #98d8d8;
-      }
-      .dragon {
-        background-color: #7038f8;
-      }
-      .dark {
-        background-color: #705848;
-      }
-      .fairy {
-        background-color: #ee99ac;
-      }
-    }
+      .type-list {
+        display: flex;
+        gap: 5px;
 
-    /* Stats Table Styles */
-    .stats-table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-      td {
-        padding: 8px;
-        border: 1px solid #ccc;
-        text-align: left;
+        .type {
+          padding: 5px 10px;
+          border-radius: 20px;
+          text-transform: capitalize;
+          font-weight: bold;
+          color: white;
+        }
+
+        .grass {
+          background-color: #78c850;
+        }
+
+        .fire {
+          background-color: #f08030;
+        }
+
+        .water {
+          background-color: #6890f0;
+        }
+
+        .electric {
+          background-color: #f8d030;
+        }
+
+        .normal {
+          background-color: #a8a878;
+        }
+
+        .fighting {
+          background-color: #c03028;
+        }
+
+        .flying {
+          background-color: #a890f0;
+        }
+
+        .poison {
+          background-color: #a040a0;
+        }
+
+        .ground {
+          background-color: #e0c068;
+        }
+
+        .rock {
+          background-color: #b8a038;
+        }
+
+        .bug {
+          background-color: #a8b820;
+        }
+
+        .ghost {
+          background-color: #705898;
+        }
+
+        .steel {
+          background-color: #b8b8d0;
+        }
+
+        .psychic {
+          background-color: #f85888;
+        }
+
+        .ice {
+          background-color: #98d8d8;
+        }
+
+        .dragon {
+          background-color: #7038f8;
+        }
+
+        .dark {
+          background-color: #705848;
+        }
+
+        .fairy {
+          background-color: #ee99ac;
+        }
+      }
+
+      /* Stats Table Styles */
+      .stats-table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 10px;
+
+        td {
+          text-transform: capitalize;
+          padding: 8px;
+          border: 1px solid #ccc;
+          text-align: left;
+        }
       }
     }
   }
+
   .button-container {
     margin-top: 20px;
   }
