--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -37,9 +37,9 @@
     }
   
     .nav {
+      text-align: center;
       a {
-        margin-left: 20px;
-        color: #333;
+        color: #1B1212;
         text-decoration: none;
         transition: color 0.3s ease;
   
