Removed unnecessary comments

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,5 @@
-/* styles/Header.scss */
-
 .header {
-    background-color: #FFCB05; /* Pokémon Yellow */
-    padding: 15px 0;
+    background-color: #FFCB05; 
     width: 100%;
     top: 0;
     position: sticky;
